apply protobuf to serialize and deserialize for clusterInfo.